# aorta4llm

./: .gitignore  CLAUDE.md  DESIGN.md  IMPROVEMENTS.md  PLAN-v2.md  PLAN.md  README.md  TODO.md  pyproject.toml
cli/: cmd_access.py  cmd_add_template.py  cmd_allow_once.py  cmd_doctor.py  cmd_dry_run.py  cmd_explain.py  cmd_hook.py  cmd_init.py  cmd_norm.py  cmd_permissions.py  cmd_protect.py  cmd_reset.py  cmd_status.py  cmd_template.py  cmd_validate.py  cmd_watch.py  main.py  spec_utils.py
dashboard/: __main__.py  server.py
dashboard/static/: index.html
docs/: EXTENSIONS.md  claude-memory.md  getting-started.md  implementation-phases.md  index.html  llm-governance-challenges.md  next-direction.md  test-suite.md
examples/block_demo/: demo.py
examples/health_check_project/: README.md
examples/obligation_demo/: demo.py
examples/three_role_demo/: demo.py
governance/: bash_analyzer.py  compiler.py  engine.py  engine_types.py  evaluator.py  py_engine.py  service.py  validator.py
governance/prolog/: metamodel.pl  nc.pl  og.pl
governance/tests/: conftest.py  test_access_map.py  test_add_template.py  test_allow_once.py  test_bash_analysis.py  test_bash_analyzer.py  test_cli_norm_mgmt.py  test_cmd_matches_cleanup.py  test_compiler.py  test_doctor.py  test_engine.py  test_explain.py  test_hooks.py  test_init.py  test_integration.py  test_norms.py  test_permissions.py  test_service.py  test_soft_blocks.py  test_terms.py  test_validator.py  test_workflow.py
integration/: events.py  hooks.py
orchestrator/: __main__.py  agent.py  prompts.py  run.py
org-specs/: arch_gate_workflow.yaml  code_review.yaml  security_workflow.yaml  three_role_workflow.yaml
org-specs/templates/: review-gate.yaml  safe-agent.yaml  test-gate.yaml
tests/: conftest.py
tests/cli/: test_add_template.py  test_cli_norm_mgmt.py  test_context.py  test_continue.py  test_doctor.py  test_explain.py  (+5 more)
(+65 files in other folders)
